--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Questionnaire
-subtitle: Préférences des résidents du sud de la France pour la gestion des plages
+description: Préférences des résidents du sud de la France pour la gestion des plages
 url: ""
 theme: jekyll-theme-cayman
